docs/api/qiskit/1.0/qiskit.providers.fake_provider.Fake5QV1.mdx
---
title: Fake5QV1 (v1.0)
description: API reference for qiskit.providers.fake_provider.Fake5QV1 in qiskit v1.0
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.fake_provider.Fake5QV1
---

# Fake5QV1

<Class id="qiskit.providers.fake_provider.Fake5QV1" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/providers/fake_provider/backends_v1/fake_5q/fake_5q_v1.py#L21-L41" signature="qiskit.providers.fake_provider.Fake5QV1" modifiers="class">
  Bases: [`FakeQasmBackend`](providers_fake_provider#qiskit.providers.fake_provider.FakeQasmBackend "qiskit.providers.fake_provider.fake_qasm_backend.FakeQasmBackend")

  A fake backend with the following characteristics:

  *   num\_qubits: 5

  *   coupling\_map:

      > ```text
      >     1
      >   / |
      > 0 - 2 - 3
      >     | /
      >     4
      > ```

  *   basis\_gates: `["id", "rz", "sx", "x", "cx", "reset"]`

  FakeBackend initializer.

  **Parameters**

  *   **configuration** ([*BackendConfiguration*](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")) – backend configuration
  *   **time\_alive** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) – time to wait before returning result

  ## Attributes

  ### backend\_name

  <Attribute id="qiskit.providers.fake_provider.Fake5QV1.backend_name" attributeValue="'fake_5q_v1'" />

  ### conf\_filename

  <Attribute id="qiskit.providers.fake_provider.Fake5QV1.conf_filename" attributeValue="'conf_yorktown.json'" />

  ### dirname

  <Attribute id="qiskit.providers.fake_provider.Fake5QV1.dirname" attributeValue="'/home/runner/work/qiskit/qiskit/.tox/docs/lib/python3.9/site-packages/qiskit/providers/fake_provider/backends_v1/fake_5q'" />

  ### options

  <Attribute id="qiskit.providers.fake_provider.Fake5QV1.options">
    Return the options for the backend

    The options of a backend are the dynamic parameters defining how the backend is used. These are used to control the [`run()`](#qiskit.providers.fake_provider.Fake5QV1.run "qiskit.providers.fake_provider.Fake5QV1.run") method.
  </Attribute>

  ### props\_filename

  <Attribute id="qiskit.providers.fake_provider.Fake5QV1.props_filename" attributeValue="'props_yorktown.json'" />

  ### version

  <Attribute id="qiskit.providers.fake_provider.Fake5QV1.version" attributeValue="1" />

  ## Methods

  ### configuration

  <Function id="qiskit.providers.fake_provider.Fake5QV1.configuration" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/providers/backend.py#L141-L147" signature="configuration()">
    Return the backend configuration.

    **Returns**

    the configuration for the backend.

    **Return type**

    [BackendConfiguration](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")
  </Function>

  ### name

  <Function id="qiskit.providers.fake_provider.Fake5QV1.name" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/providers/backend.py#L180-L186" signature="name()">
    Return the backend name.

    **Returns**

    the name of the backend.

    **Return type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")
  </Function>

  ### properties

  <Function id="qiskit.providers.fake_provider.Fake5QV1.properties" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/providers/fake_provider/fake_qasm_backend.py#L44-L48" signature="properties()">
    Returns a snapshot of device properties
  </Function>

  ### provider

  <Function id="qiskit.providers.fake_provider.Fake5QV1.provider" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/providers/backend.py#L158-L164" signature="provider()">
    Return the backend Provider.

    **Returns**

    the Provider responsible for the backend.

    **Return type**

    [Provider](qiskit.providers.Provider "qiskit.providers.Provider")
  </Function>

  ### run

  <Function id="qiskit.providers.fake_provider.Fake5QV1.run" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/providers/fake_provider/fake_backend.py#L535-L563" signature="run(run_input, **kwargs)">
    Main job in simulator
  </Function>

  ### set\_options

  <Function id="qiskit.providers.fake_provider.Fake5QV1.set_options" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/providers/backend.py#L122-L139" signature="set_options(**fields)">
    Set the options fields for the backend

    This method is used to update the options of a backend. If you need to change any of the options prior to running just pass in the kwarg with the new value for the options.

    **Parameters**

    **fields** – The fields to update the options

    **Raises**

    [**AttributeError**](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.12)") – If the field passed in is not part of the options
  </Function>

  ### status

  <Function id="qiskit.providers.fake_provider.Fake5QV1.status" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/providers/backend.py#L166-L178" signature="status()">
    Return the backend status.

    **Returns**

    the status of the backend.

    **Return type**

    [BackendStatus](qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")
  </Function>
</Class>

